
package pot.model;

/**
 *
 * @author Joana
 */
public class GrauProficiencia {
    
    private int valor;
    private String designacao;
    
    public GrauProficiencia (int valor, String designacao){
        this.valor = valor;
        this.designacao = designacao;
    }
}
