@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Plataforma {
  -String designacao
}

class CompetenciaTecnica {
  -String codigo
  -String descBreve
  -String descDetalhada
}

class GrauProficiencia {
  -Integer valor
  -String designacao
}

class AreaAtividade {
  -String codigo
  -String descBreve
  -String descDetalhada
}


Plataforma "1" -- "*" CompetenciaTecnica : possui >
CompetenciaTecnica "*" -- "1" AreaAtividade : referente a >
CompetenciaTecnica "1" --- "*" GrauProficiencia : aplica  >
Plataforma "1" -- "*" AreaAtividade : possui >

@enduml
